--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "parcel serve index.html --no-cache"
+    "dev": "parcel serve index.html"
   },
   "author": "",
   "license": "ISC",
