--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "@develephant/types-phaser": "^1.0.1",
     "phaser": "^3.20.1",
     "underscore": "^1.9.1"
+  },
+  "devDependencies": {
+    "parcel": "^1.12.4",
+    "typescript": "^4.1.2"
   }
 }
